[metadata]
name = yoyo-migrations
version = attr:yoyo.__version__
description = Database migrations with SQL
long_description = file: README.rst
author = Oliver Cope
author_email = oliver@redgecko.org
url = https://ollycope.com/software/yoyo/latest/
keywords = migrations migrate database alembic south
license = Apache
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Database
    Topic :: Database :: Front-Ends
    Topic :: Software Development
    Topic :: Software Development :: Version Control
    Programming Language :: Python :: 3

[options]
packages = 
    yoyo
    yoyo.scripts
    yoyo.internalmigrations
install_requires = 
    sqlparse
    tabulate
    importlib_metadata

[options.package_data]
yoyo = tests/migrations/*.py

[options.extras_require]
mysql = PyMySQL
postgres = psycopg2
pyodbc = pyodbc

[options.entry_points]
console_scripts = 
    yoyo = yoyo.scripts.main:main
    yoyo-migrate = yoyo.scripts.main:main

yoyo.backends =
    odbc = yoyo.backends:ODBCBackend
    oracle = yoyo.backends:OracleBackend
    postgresql = yoyo.backends:PostgresqlBackend
    postgres = yoyo.backends:PostgresqlBackend
    psql = yoyo.backends:PostgresqlBackend
    mysql = yoyo.backends:MySQLBackend
    mysql+mysqldb = yoyo.backends:MySQLdbBackend
    sqlite = yoyo.backends:SQLiteBackend
    snowflake = yoyo.backends:SnowflakeBackend
    redshift = yoyo.backends:RedshiftBackend
