[metadata]
name = yoyo-migrations
version = attr:yoyo.__version__
description = Database migrations with SQL
long_description = file: README.rst
author = Oliver Cope
author_email = oliver@redgecko.org
url = https://ollycope.com/software/yoyo/latest/
keywords = migrations migrate database alembic south
license = Apache
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Database
    Topic :: Database :: Front-Ends
    Topic :: Software Development
    Topic :: Software Development :: Version Control
    Programming Language :: Python :: 3

[options]
packages = 
    yoyo
    yoyo.backends
    yoyo.backends.core
    yoyo.backends.contrib
    yoyo.scripts
    yoyo.internalmigrations
install_requires = 
    sqlparse
    tabulate
    importlib_metadata

[options.package_data]
yoyo = tests/migrations/*.py

[options.extras_require]
mysql = PyMySQL
postgres = psycopg2
pyodbc = pyodbc

[options.entry_points]
console_scripts = 
    yoyo = yoyo.scripts.main:main
    yoyo-migrate = yoyo.scripts.main:main

yoyo.backends =
    odbc = yoyo.backends.contrib.odbc:ODBCBackend
    oracle = yoyo.backends.contrib.oracle:OracleBackend
    postgres = yoyo.backends.core.postgresql:PostgresqlBackend
    postgresql = yoyo.backends.core.postgresql:PostgresqlBackend
    psql = yoyo.backends.core.postgresql:PostgresqlBackend
    postgresql+psycopg = yoyo.backends.core.postgresql:PostgresqlPsycopgBackend
    mysql = yoyo.backends.core.mysql:MySQLBackend
    mysql+mysqldb = yoyo.backends.core.mysql:MySQLdbBackend
    sqlite = yoyo.backends.core.sqlite3:SQLiteBackend
    snowflake = yoyo.backends.contrib.snowflake:SnowflakeBackend
    redshift = yoyo.backends.contrib.redshift:RedshiftBackend
